infra/kustomize/bff/manifests/prod.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bff-ap-svc
  name: bff-ap-svc
  namespace: app-a
spec:
  ports:
  - name: bff-ap-port
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: bff-ap
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-ap
  namespace: app-a
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: bff-ap
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bff-ap
      name: bff-ap
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: bff-ap-config
        - secretRef:
            name: bff-ap-secret
        image: t3goto/bff-ap:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - ls
            - /usr/local/bin/node
          failureThreshold: 10
          initialDelaySeconds: 0
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: bff-ap
        ports:
        - containerPort: 9001
        readinessProbe:
          failureThreshold: 10
          httpGet:
            path: /api/v1/health/readiness
            port: 9001
          initialDelaySeconds: 0
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 150m
            memory: 150Mi
          requests:
            cpu: 100m
            memory: 100Mi
        startupProbe:
          failureThreshold: 100
          httpGet:
            path: /api/v1/health/readiness
            port: 9001
          initialDelaySeconds: 0
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: bff-ap-dr
  namespace: app-a
spec:
  host: bff-ap-svc.app-a.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bff-ap-vs-gw
  namespace: app-a
spec:
  gateways:
  - istio-system/ingress-gateway
  hosts:
  - www.lratg.com
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: bff-ap-svc.app-a.svc.cluster.local
        port:
          number: 9001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bff-ap-vs-mesh
  namespace: app-a
spec:
  hosts:
  - bff-ap-svc.app-a.svc.cluster.local
  http:
  - route:
    - destination:
        host: bff-ap-svc.app-a.svc.cluster.local
        port:
          number: 9001
